Relax bounds to support lts-12.26
While the test suite uses `aesonQQ` which comes from `aeson-1.4.2`,
the library itself does not need such a new version.

--- a/stack.yaml
+++ b/stack.yaml
@@ -1,5 +1,14 @@
-resolver: lts-13.25
+# resolver: lts-13.25
+resolver: lts-12.26
 
 packages:
 - '.'
 - example/
+
+extra-deps:
+  - aeson-1.4.3.0
+  - github: fosskers/servant
+    commit: c9472671e8dceb07891509a998614687d1843629
+    subdirs:
+      - servant
+      - servant-server
