--- a/servant-swagger.cabal
+++ b/servant-swagger.cabal
@@ -73,17 +73,17 @@ library
     Servant.Swagger.Internal.TypeLevel.Every
     Servant.Swagger.Internal.TypeLevel.TMap
   hs-source-dirs:      src
-  build-depends:       aeson                     >=1.4.2.0 && <1.5
+  build-depends:       aeson                     >=1.3.1.1 && <1.5
                      , aeson-pretty              >=0.8.7    && <0.9
                      , base                      >=4.9.1.0  && <4.13
                      , base-compat               >=0.10.5   && <0.11
                      , bytestring                >=0.10.8.1 && <0.11
                      , http-media                >=0.7.1.3  && <0.9
                      , insert-ordered-containers >=0.2.1.0  && <0.3
-                     , lens                      >=4.17     && <4.18
+                     , lens                      >=4.16.1   && <4.18
                      , servant                   >=0.15     && <0.17
                      , singleton-bool            >=0.1.4    && <0.2
-                     , swagger2                  >=2.3.0.1  && <2.5
+                     , swagger2                  >=2.2.2    && <2.5
                      , text                      >=1.2.3.0  && <1.3
                      , unordered-containers      >=0.2.9.0  && <0.3
 
@@ -110,11 +110,11 @@ test-suite spec
   type:             exitcode-stdio-1.0
   hs-source-dirs:   test
   main-is:          Spec.hs
-  build-tool-depends: hspec-discover:hspec-discover >=2.6.0 && <2.8
+  build-tool-depends: hspec-discover:hspec-discover >=2.5.5 && <2.8
   build-depends:    base
                   , base-compat
-                  , aeson
-                  , hspec >=2.6.0 && <2.8
+                  , aeson >= 1.4.2.0 && < 1.5
+                  , hspec >=2.5.5 && <2.8
                   , QuickCheck
                   , lens
                   , lens-aeson >=1.0.2    && <1.1
