--- a/servant-swagger.cabal
+++ b/servant-swagger.cabal
@@ -43,6 +43,9 @@ extra-source-files:
   , example/*.cabal
   , example/swagger.json
   , example/LICENSE
+  , test/todoAPI.json
+  , test/hackageAPI.json
+  , test/getPostAPI.json
 extra-doc-files:
     example/src/*.hs
   , example/test/*.hs
@@ -76,9 +79,9 @@ library
   build-depends:       aeson                     >=1.3.1.1 && <1.5
                      , aeson-pretty              >=0.8.7    && <0.9
                      , base                      >=4.9.1.0  && <4.13
-                     , base-compat               >=0.10.5   && <0.11
+                     , base-compat               >=0.10.4   && <0.11
                      , bytestring                >=0.10.8.1 && <0.11
-                     , http-media                >=0.7.1.3  && <0.9
+                     , http-media                >=0.7.1.2  && <0.9
                      , insert-ordered-containers >=0.2.1.0  && <0.3
                      , lens                      >=4.16.1   && <4.18
                      , servant                   >=0.15     && <0.17
@@ -110,11 +113,11 @@ test-suite spec
   type:             exitcode-stdio-1.0
   hs-source-dirs:   test
   main-is:          Spec.hs
-  build-tool-depends: hspec-discover:hspec-discover >=2.5.5 && <2.8
+  build-tool-depends: hspec-discover:hspec-discover >=2.5.4 && <2.8
   build-depends:    base
                   , base-compat
-                  , aeson >= 1.4.2.0 && < 1.5
-                  , hspec >=2.5.5 && <2.8
+                  , aeson
+                  , hspec >=2.5.4 && <2.8
                   , QuickCheck
                   , lens
                   , lens-aeson >=1.0.2    && <1.1
